[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xai-easy"
version = "0.1.0"
description = "A lightweight package for Explainable AI on ML models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Prajwal Chopade", email = "your-email@example.com"}
]
dependencies = [
    "scikit-learn",
    "matplotlib",
    "pandas",
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/your-username/xai_easy"
"Bug Tracker" = "https://github.com/your-username/xai_easy/issues"
